fixed scrollbar track by adding padding to userMainContent instead of floor div

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,7 @@ body {
 
 #landingMain, #userMainContent {
     background-color: white;
+    padding: 20px;
 }
 
 
@@ -128,6 +129,7 @@ footer a {
     width: 100vh;
     max-height: 200px;
     overflow-y: scroll;
+    margin: auto;
 }
 
 #time {
@@ -138,12 +140,14 @@ footer a {
 
 #floor::-webkit-scrollbar {
     width: 20px;
+    height:10px;
 }
 
-::-webkit-scrollbar-track
+#floor::-webkit-scrollbar-track
 {
     background-color: rgba(90,90,90,.05);
     border-radius: 20px;
+
 }
 
 #floor::-webkit-scrollbar-thumb {
